5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1575_1333.log
== TEST (2019-03-13 12:44:27) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:11:19) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:11:25) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.156895
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
